Closed Bug 1542204 Opened 5 years ago Closed 5 years ago

ContentParent::RecvCreateWindowInDifferentProcess shouldn't be called with special names.

Categories

(Core :: DOM: Core & HTML, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla68
Tracking Status
firefox68 --- fixed

People

(Reporter: farre, Assigned: farre)

References

Details

Attachments

(1 file)

The special names '_self', '_top' and '_parent' should really never reach RecvCreateWindowInDifferentProcess, since they'll always reference an existing target. '_blank' on the other hand can definitely reach RecvCreateWindowInDifferentProcess, but '_blank' isn't a valid name for a window, only for a target.

Assignee: nobody → afarre
Blocks: 1523636
Status: NEW → ASSIGNED
Priority: -- → P2
Pushed by afarre@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/33a0828dfcfa
Normalize "_blank" to "" before calling SendCreateWindowInDifferentProcess. r=nika
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: