Bug 1542204 - Normalize "_blank" to "" before calling SendCreateWindowInDifferentProcess. r=nika

Differential Revision: https://phabricator.services.mozilla.com/D26300

--HG--
extra : moz-landing-system : lando